<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/robotic_arm_desc"
            android:src="@drawable/robotic_arm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblIPAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/element_textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/element_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/sbClaw_text"
            android:textSize="@dimen/element_textSize" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbClaw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dsb_indicatorColor="@color/colorAccent"
            app:dsb_max="50"
            app:dsb_min="0"
            app:dsb_progressColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/element_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/sbElbow_text"
            android:textSize="@dimen/element_textSize" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbElbow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dsb_indicatorColor="@color/colorAccent"
            app:dsb_max="75"
            app:dsb_min="0"
            app:dsb_progressColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/element_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/sbBase_text"
            android:textSize="@dimen/element_textSize" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dsb_indicatorColor="@color/colorAccent"
            app:dsb_max="180"
            app:dsb_min="0"
            app:dsb_progressColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/element_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/sbDelay_text"
            android:textSize="@dimen/element_textSize" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbDelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dsb_indicatorColor="@color/colorAccent"
            app:dsb_max="20"
            app:dsb_min="0"
            app:dsb_progressColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:onClick="btnReset_onClick"
            android:text="@string/btnReset_text" />

        <Button
            android:id="@+id/btnRecord"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:onClick="btnRecord_onClick"
            android:text="@string/btnRecord_text" />

        <Button
            android:id="@+id/btnRun"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:onClick="btnRun_onClick"
            android:text="@string/btnRun_text" />
    </LinearLayout>
</LinearLayout>